<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.MainFragment">

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/main_icon"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_bar_title"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textColor="@color/text_color"
            android:fontFamily="@font/jakarta"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical"/>

        <Button
            android:id="@+id/addLinkButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:fontFamily="@font/jakarta"
            android:text="@string/add_button"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cornerRadius="24dp"
            android:drawableLeft="@drawable/add_icon"
            app:strokeColor="@color/button_purple_color"
            app:strokeWidth="36dp"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:id="@+id/menuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_icon"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/noDownloadsImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/folder_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/noDownloadsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_downloads_string"
        android:textSize="18sp"
        android:fontFamily="@font/jakarta"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noDownloadsImageView"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/downloadsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:paddingBottom="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLinearLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>